[package]
name = "lien-score"
version = "0.0.1"
description = "LIEN per-agent credit score PDA."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lien_score"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
